--- a/index.html
+++ b/index.html
@@ -37,15 +37,76 @@
             <h3>Explore the colorful world </h3>
             <span></span>
             <h1>A WONDERFULL GIFT</h1>
-            <BUtton>LearnMore</BUtton> c
+            <BUtton>LearnMore
+                <i class="fa-solid fa-asterisk"></i>
+            </BUtton> 
         </div>
     </header>
     <!-----Header Section End-------->
 
-    <!-----Banner Section Start------->
-
-    <!-----Banner Section End------->
-
-
+    <!-----upcoming event Start------->
+<section>
+    <div class="upcoming-event">
+        <h2>Upcoming Event</h2>
+        <span></span>
+        <div class="event">
+            <div class="event-item">
+                <img src="./images/wanderer.jpg" alt="">
+                <h4>EVERES CAMP TREK</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia incidunt voluptates a saepe ducimus quod deserunt architecto inventore suscipit ipsam nulla, modi tempore nisi vel possimus nesciunt dignissimos iusto. At.</p>
+                <a href="#">Learn More</a>
+            </div>
+            <div class="event-item">
+                <img src="./images/woman.jpg" alt="">
+                <h4>EVERES CAMP TREK</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia incidunt voluptates a saepe ducimus quod deserunt architecto inventore suscipit ipsam nulla, modi tempore nisi vel possimus nesciunt dignissimos iusto. At.</p>
+                <a href="#">Learn More</a>
+            </div>
+        </div>
+    </div>
+</section>
+    <!-----Upcoming event End------->
+<!--------Explore start---------->
+<section class="explore-main">
+    <div class="Explore">
+        <div class="explore-item"></div>
+        <div class="explore-item">
+            <h1>EXPLORE THE WORLD</h1>
+            <span></span>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum nihil possimus quisquam voluptate consequuntur pariatur, fugiat tenetur, ullam, mollitia nisi doloribus explicabo porro tempore. Adipisci alias magnam molestias est quae.</p>
+            <a href="#">Learn More</a>
+        </div>
+    </div>
+</section>
+<!--------Explore end---------->
+<!--------Tour start---------->
+<section>
+    <div class="tour">
+        <div class="tour-item 
+        item-one">
+            <h5>UPCOMING TOUR & DESTINATION</h5>
+            <span></span>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, repellendus?</p>
+            <a href="#">Learn More</a>
+        </div>
+        <div class="tour-item">
+            <img class="img-one" src="./images/sea.jpg" alt="">
+            <img class="img-two" src="./images/fisherman.jpg" alt="">
+        </div>
+        <div class="tour-item">
+            <img class="img-two" src="./images/fishermannet.jpg" alt="">
+            <img class="img-one" src="./images/child.jpg" alt="">
+        </div>
+    </div>
+</section>
+<!--------Tour end---------->
+<!--------Footer start---------->
+<footer>
+    <div>
+        <i class="fab fa-facebook"></i> 
+    </div>
+    <p>Copyright 2024 | All rights reserved</p>
+</footer>
+<!--------Footer end------------>
 </body>
 </html>
