Mobile device done

--- a/index.html
+++ b/index.html
@@ -103,10 +103,16 @@
 <!--------Footer start---------->
 <footer>
     <div>
-        <i class="fab fa-facebook"></i> 
+        <i class="fab fa-facebook"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-twitter"></i>
+        <i class="fab fa-youtube"></i>
+        <i class="fab fa-linkedin"></i>
     </div>
     <p>Copyright 2024 | All rights reserved</p>
 </footer>
 <!--------Footer end------------>
+
+<script src="https://kit.fontawesome.com/672582d651.js" crossorigin="anonymous"></script>
 </body>
 </html>
