Mobile media query done

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-----Header Section End-------->
 
     <!-----upcoming event Start------->
-<section>
+<!-- <section>
     <div class="upcoming-event">
         <h2>Upcoming Event</h2>
         <span></span>
@@ -64,10 +64,10 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
     <!-----Upcoming event End------->
 <!--------Explore start---------->
-<section class="explore-main">
+<!-- <section class="explore-main">
     <div class="Explore">
         <div class="explore-item"></div>
         <div class="explore-item">
@@ -77,10 +77,10 @@
             <a href="#">Learn More</a>
         </div>
     </div>
-</section>
+</section> -->
 <!--------Explore end---------->
 <!--------Tour start---------->
-<section>
+<!-- <section>
     <div class="tour">
         <div class="tour-item 
         item-one">
@@ -98,10 +98,10 @@
             <img class="img-one" src="./images/child.jpg" alt="">
         </div>
     </div>
-</section>
+</section> -->
 <!--------Tour end---------->
 <!--------Footer start---------->
-<footer>
+<!-- <footer>
     <div>
         <i class="fab fa-facebook"></i>
         <i class="fab fa-instagram"></i>
@@ -110,7 +110,7 @@
         <i class="fab fa-linkedin"></i>
     </div>
     <p>Copyright 2024 | All rights reserved</p>
-</footer>
+</footer> -->
 <!--------Footer end------------>
 
 <script src="https://kit.fontawesome.com/672582d651.js" crossorigin="anonymous"></script>
