media query upcoming event done

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-----Header Section End-------->
 
     <!-----upcoming event Start------->
-<!-- <section>
+<section>
     <div class="upcoming-event">
         <h2>Upcoming Event</h2>
         <span></span>
@@ -64,7 +64,7 @@
             </div>
         </div>
     </div>
-</section> -->
+</section>
     <!-----Upcoming event End------->
 <!--------Explore start---------->
 <!-- <section class="explore-main">
