--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adventure World</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/media.css">
 </head>
 <body>
     <!-----Header Section Start-------->
@@ -67,7 +68,7 @@
 </section>
     <!-----Upcoming event End------->
 <!--------Explore start---------->
-<!-- <section class="explore-main">
+<section class="explore-main">
     <div class="Explore">
         <div class="explore-item"></div>
         <div class="explore-item">
@@ -77,13 +78,12 @@
             <a href="#">Learn More</a>
         </div>
     </div>
-</section> -->
+</section>
 <!--------Explore end---------->
 <!--------Tour start---------->
-<!-- <section>
+<section>
     <div class="tour">
-        <div class="tour-item 
-        item-one">
+        <div class="tour-item">
             <h5>UPCOMING TOUR & DESTINATION</h5>
             <span></span>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, repellendus?</p>
@@ -98,10 +98,10 @@
             <img class="img-one" src="./images/child.jpg" alt="">
         </div>
     </div>
-</section> -->
+</section>
 <!--------Tour end---------->
 <!--------Footer start---------->
-<!-- <footer>
+<footer>
     <div>
         <i class="fab fa-facebook"></i>
         <i class="fab fa-instagram"></i>
@@ -110,7 +110,7 @@
         <i class="fab fa-linkedin"></i>
     </div>
     <p>Copyright 2024 | All rights reserved</p>
-</footer> -->
+</footer>
 <!--------Footer end------------>
 
 <script src="https://kit.fontawesome.com/672582d651.js" crossorigin="anonymous"></script>
