Hover set up done

--- a/index.html
+++ b/index.html
@@ -10,30 +10,32 @@
 <body>
     <!-----Header Section Start-------->
     <header>
-        <div class="navbar">
+        <nav class="navbar">
             <div class="logo">
-            <h3>outdoor <br> <span>adventure</span></h3>
-        </div>
-        <nav>
-            <ul>
-                <li>
-                    <a href="#">Home</a>
-                </li>
-                <li>
-                    <a href="#">About</a>
-                </li>
-                <li>
-                    <a href="#">Blog</a>
-                </li>
-                <li>
-                    <a href="#">Service</a>
-                </li>
-                <li>
-                    <a href="#">Explore</a>
-                </li>
-            </ul>
+                <ul>
+                    <li><a href="#"><h3>outdoor <br> <span>adventure</span></h3></a></li>
+                </ul>
+            </div>
+            <div class="nav">
+                <ul>
+                    <li>
+                        <a href="#">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">About</a>
+                    </li>
+                    <li>
+                        <a href="#">Blog</a>
+                    </li>
+                    <li>
+                        <a href="#">Service</a>
+                    </li>
+                    <li>
+                        <a href="#">Explore</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
-        </div>
         <div class="banner">
             <h3>Explore the colorful world </h3>
             <span></span>
@@ -103,13 +105,15 @@
 <!--------Footer start---------->
 <footer>
     <div>
-        <i class="fab fa-facebook"></i>
-        <i class="fab fa-instagram"></i>
-        <i class="fab fa-twitter"></i>
-        <i class="fab fa-youtube"></i>
-        <i class="fab fa-linkedin"></i>
+        <ul>
+            <li><a href="#"><i class="fab fa-facebook"></i></a></li>    
+            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fab fa-youtube"></i></a></li>    
+            <li><a href="#"><i class="fab fa-linkedin"></i></a></li>    
+            <li><a href="#"><i class="fab fa-instagram"></i></a></li> 
+        </ul>
     </div>
-    <p>Copyright 2024 | All rights reserved</p>
+    <p>Copyright 2024 || All rights reserved</p>
 </footer>
 <!--------Footer end------------>
 
