tour item change max width 100%

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="tour-item">
             <h5>UPCOMING TOUR & DESTINATION</h5>
             <span></span>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, repellendus?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, repellendus? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora cumque animi reprehenderit, accusantium incidunt debitis sequi expedita aliquam cum distinctio, tenetur architecto ullam eos aliquid quae nihil laboriosam repellendus magni vitae at dolorem. Voluptatem, architecto adipisci fugit facilis fugiat illo eaque molestias animi, ut dolores natus? Perspiciatis consequatur fugit Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit obcaecati soluta, quas, ab natus officia ullam nemo velit recusandae ad, adipisci vel dolor nesciunt exercitationem provident eveniet minima aperiam libero!mollitia?</p>
             <a href="#">Learn More</a>
         </div>
         <div class="tour-item">
