--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Adventure World</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/media.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon.ico">
 </head>
 <body>
     <!-----Header Section Start-------->
